fix(feeds): Replace variable spacing tokens (#3573)

--- a/ui/components/feeds/base/_index.scss
+++ b/ui/components/feeds/base/_index.scss
@@ -31,10 +31,10 @@
    * @required
    */
   &__item {
-    padding: $spacing-x-small 0;
+    padding: $var-spacing-x-small 0;
 
     @include mq-medium-min {
-      padding: $spacing-small 0;
+      padding: $var-spacing-small 0;
     }
   }
 }
